--- a/index.html
+++ b/index.html
@@ -6,368 +6,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title></title>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="2015/client/css/styles.css">
-<style>
 
-
-
-</style>
-
+    <!--#include virtual="/client/template/global-head.html" -->
 </head>
 <body>
-
-
-<div class="logo-wrapper">
-    <div class="container">
-        <img src="//placehold.it/1170x100?text=SD_logo" class="img-responsive">
-    </div>
-</div>
-
-
-
-
-
-
-<!-- == TOP NAVIGATION == -->
-<div class="navbar-wrapper navbar-global" id="topnav">
-    <div class="navbar" role="navigation">
-        <div class="container">
-
-            <ul class="nav navbar-nav">
-
-                <li class="dropdown" data-topnav="about"><a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
-
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="/about/">About <i class="fa fa-home"></i></a></li>
-                        <li><a href="/research/">Link</a></li>
-                        <li><a href="/research/">Link</a></li>
-
-                    </ul>
-                </li>
-
-                <li class="dropdown" data-topnav="research"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Education <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="/research/">Education <i class="fa fa-home"></i></a></li>
-                        <li><a href="/research/">Link</a></li>
-                        <li><a href="/research/">Link</a></li>
-                    </ul>
-                </li>
-
-                <li class="dropdown" data-topnav="workingwithus"><a href="#" class="dropdown-toggle" data-toggle="dropdown">History <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="/workingwithus/">History <i class="fa fa-home"></i></a></li>
-                        <li><a href="/research/">Link</a></li>
-                        <li><a href="/research/">Link</a></li>
-
-                    </ul>
-                </li>
-
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">International <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="/careers/">International <i class="fa fa-home"></i></a></li>
-                        <li><a href="/research/">Link</a></li>
-                        <li><a href="/research/">Link</a></li>
-
-                    </ul>
-                </li>
-
-            </ul>
-
-      </div>
-    </div>
-</div>
-
-<!-- == END TOP NAVIGATION == -->
-
-
-
-<div class="siteheader-wrapper">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <!--
-                Solar Decathlon <span>2015</span>
-                Orange County Great Park, Irvine, California
-                <span>October 8-18, 2015</span>
-                -->
-                <img
-                    src="//placehold.it/1170x100143e68/ffffff/?text=2015_banner"
-                    class="img-responsive">
-            </div>
-         </div>
-    </div>
-</div>
-
-<div class="navbar-wrapper navbar-event">
-    <nav class="navbar">
-        <div class="container">
-            <div class="navbar-header">
-                <button
-                    type="button"
-                    class="navbar-toggle collapsed"
-                    data-toggle="collapse"
-                    data-target="#navbar-event"
-                    aria-expanded="false">
-
-                    <span class="sr-only">Toggle navigation</span>
-                    <div class="icon-bar-wrapper">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </div>
-                    <span class="navbar-toggle-label">Menu</span>
-                </button>
-            </div>
-
-            <div
-                class="collapse navbar-collapse"
-                id="navbar-event">
-
-                <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#"
-                        class="dropdown-toggle"
-                        data-toggle="dropdown"
-                        role="button"
-                        aria-haspopup="true"
-                        aria-expanded="false">Visit <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                    </ul>
-                </li>
-
-                <li class="dropdown">
-                    <a href="#"
-                        class="dropdown-toggle"
-                        data-toggle="dropdown"
-                        role="button"
-                        aria-haspopup="true"
-                        aria-expanded="false">Competition <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                    </ul>
-                </li>
-
-                <li class="dropdown">
-                    <a href="#"
-                        class="dropdown-toggle"
-                        data-toggle="dropdown"
-                        role="button"
-                        aria-haspopup="true"
-                        aria-expanded="false">News <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                    </ul>
-                </li>
-
-                <li class="dropdown">
-                    <a href="#"
-                        class="dropdown-toggle"
-                        data-toggle="dropdown"
-                        role="button"
-                        aria-haspopup="true"
-                        aria-expanded="false">Photos <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                    </ul>
-                </li>
-
-                <li class="dropdown">
-                    <a href="#"
-                        class="dropdown-toggle"
-                        data-toggle="dropdown"
-                        role="button"
-                        aria-haspopup="true"
-                        aria-expanded="false">Videos <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                    </ul>
-                </li>
-
-                <li class="dropdown">
-                    <a href="#"
-                        class="dropdown-toggle"
-                        data-toggle="dropdown"
-                        role="button"
-                        aria-haspopup="true"
-                        aria-expanded="false">Sponsors <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                    </ul>
-                </li>
-
-                <li class="dropdown">
-                    <a href="#"
-                        class="dropdown-toggle"
-                        data-toggle="dropdown"
-                        role="button"
-                        aria-haspopup="true"
-                        aria-expanded="false">Volunteers <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                    </ul>
-                </li>
-
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container -->
-    </nav>
-</div>
-
-
+<!--#include virtual="/client/template/global-banner-topnav.html" -->
+<!--#include virtual="/client/template/2015-banner-topnav.html"   -->
 <div class="container" id="content">
+<div class="row">
+<!-- BEGIN CONTENT -->
+
+        <!-- WIDE CAROUSEL -->
+        <!--#include virtual="/client/template/hp-carousel-wide.html"  -->
+        <!-- END WIDE CAROUSEL -->
 
 
-    <!-- CAROUSEL -->
-    <div id="carousel"
-         class="carousel slide"
-         data-ride="carousel"
-         data-interval="false">
+        <!-- NARROW CAROUSEL -->
+        <!--#include virtual="/client/template/hp-carousel-narrow.html"  -->
+        <!-- END CAROUSEL -->
 
-        <div class="row">
-            <div class="col-sm-9 col-slides">
+        <!-- SCORES AND STANDINGS -->
+        <!--#include virtual="/client/template/hp-scores-widget.html" -->
+        <!-- END SCORES AND STANDINGS -->
 
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <a href="#Wendy">
-                            <img
-                                src="http://placehold.it/1170x700"
-                                class="img-responsive"
-                                alt="">
-                            <div class="carousel-caption clearfix">
-                                <p class="headline">___TITLE___</p>
-                                <p class="subhead">___TEASER___ <i class="fa fa-caret-right"></i></p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item">
-                        <a href="#Xerxes">
-                            <img
-                                src="//placehold.it/1170x700/ff0000/00ff00"
-                                class="img-responsive"
-                                alt="">
-                            <div class="carousel-caption">
-                                <p class="headline">___TITLE___</p>
-                                <p class="subhead">___TEASER___ <i class="fa fa-caret-right"></i></p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="item">
-                        <a href="#Nicholas">
-                            <img
-                                src="//placehold.it/1170x700"
-                                class="img-responsive"
-                                alt="">
-                            <div class="carousel-caption">
-                                <p class="headline">___TITLE___</p>
-                                <p class="subhead">___TEASER___ <i class="fa fa-caret-right"></i></p>
-                            </div>
-                        </a>
-                    </div>
+</div><!-- /row -->
+
+
+
+
+<div class="row">
+    <div class="col-sm-8">
+
+        <p class="intro">The U.S. Department of Energy Solar Decathlon challenges collegiate teams to design, build, and operate solar-powered houses that are cost-effective, energy-efficient, and attractive. The winner of the competition is the team that best blends affordability, consumer appeal, and design excellence with optimal energy production and maximum efficiency.</p>
+
+        <div class="col-sm-6">
+            <div class="panel panel-flat">
+                <div class="panel-heading">Latest Photos</div>
+                    <img src="https://placekitten.com/g/343/190"
+                        class="img-responsive">
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="panel panel-flat">
+                <div class="panel-heading">Latest Videos</div>
+                <div class="panel-body embed-responsive embed-responsive-16by9">
+                  <iframe
+                      class="embed-responsive-item"
+                      src="//www.youtube.com/embed/videoseries?list=PLCC37B13B68FF5930" allowfullscreen>
+                  </iframe>
+
                 </div>
             </div>
 
-            <!-- CAROUSEL THUMBS -->
-            <div class="col-sm-3 col-thumbs">
-                <div class="carousel-indicators">
-                    <a class="fogbox active">
-                        <div>
-                            <img src="//placehold.it/385x230"
-                                class="img-responsive"
-                                alt=""
-                                data-target="#carousel"
-                                data-slide-to="0">
-
-                            <div class="overlay"></div>
-                        </div>
-                    </a>
-                    <a class="fogbox">
-                        <div>
-                            <img src="//placehold.it/385x230"
-                                class="img-responsive"
-                                alt=""
-                                data-target="#carousel"
-                                data-slide-to="1">
-
-                            <div class="overlay"></div>
-                        </div>
-                    </a>
-                    <a class="fogbox">
-                        <div>
-                            <img src="//placehold.it/385x230"
-                                class="img-responsive"
-                                alt=""
-                                data-target="#carousel"
-                                data-slide-to="2">
-
-                            <div class="overlay"></div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <!-- END CAROUSEL THUMBS -->
         </div>
     </div>
-    <!-- END CAROUSEL -->
 
+    <div class="col-sm-4">
 
-<!-- CAROUSEL CONTROLS -->
-<!-- <div class="carousel-controls visible-xs clearfix">
+        <h2>Latest News <i class="fa fa-rss-square"></i></h2>
 
-    <div class="carousel-previous">
-        <a href="#carousel" data-slide="prev">
-            <i class="fa fa-chevron-left"></i>
-            <div>Previous<br>Story</div>
-        </a>
+        <div class="feed-container">
+
+            <div class="media">
+                <a href="#" class="link-block">
+                    <div class="media-body">
+                        <h4 class="media-heading">Team Orange County Sprouts Casa del Sol on Its Home Turf</h4>
+                        <h5 class="date">August 10, 2015</h5>
+                        <p>The U.S. Department of Energy Solar Decathlon 2015’s Team Orange County—comprising the University of California, Irvine; ... More <i class="fa fa-chevron-circle-right"></i></p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="media">
+                <a href="#" class="link-block">
+                    <div class="media-body">
+                        <h4 class="media-heading">Team Orange County Sprouts Casa del Sol on Its Home Turf</h4>
+                        <h5 class="date">August 10, 2015</h5>
+                        <p>The U.S. Department of Energy Solar Decathlon 2015’s Team Orange County—comprising the University of California, Irvine; ... More <i class="fa fa-chevron-circle-right"></i></p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="media">
+                <a href="#" class="link-block">
+                    <div class="media-body">
+                        <h4 class="media-heading">Team Orange County Sprouts Casa del Sol on Its Home Turf</h4>
+                        <h5 class="date">August 10, 2015</h5>
+                        <p>The U.S. Department of Energy Solar Decathlon 2015’s Team Orange County—comprising the University of California, Irvine; ... More <i class="fa fa-chevron-circle-right"></i></p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+
     </div>
 
-    <div class="carousel-next">
-        <a href="#carousel" data-slide="next">
-            <div>Next<br>Story</div>
-            <i class="fa fa-chevron-right"></i>
-        </a>
-    </div>
-
-</div> -->
-<!-- END CAROUSEL CONTROLS -->
 </div>
 
-<!-- FOOTER -->
-<footer id="footer" class="wrapper-footer">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 col-sm-offset-3">
-
-                <img src="/client/img/logo_doe_footer.svg" alt="U.S. Department of Energy" class="logo">
-
-                <ul class="dotlist">
-                <li><a href="#">LINK</a></li>
-                <li><a href="#">LINK</a></li>
-                <li><a href="#">LINK</a></li>
-                <li><a href="#">LINK</a></li>
-                </ul>
-
-                <img src="/client/img/logo_doe_footer.svg" alt="U.S. Department of Energy" class="logo">
-
-                <p>verbage</p>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- END FOOTER -->
 
 
-<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<!-- END CONTENT -->
+</div> <!-- /container -->
+<!--#include virtual="/client/template/global-footer.html"  -->
+<!--#include virtual="/client/template/global-scripts.html" -->
 </body>
 </html>
