--- a/teams.html
+++ b/teams.html
@@ -4,14 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Solar Decathlon</title>
-
     <!--#include virtual="/client/template/global-head.html" -->
+    <script>
+        $(function() {
+            window.solard = $.extend( {}, window.solard )
+            window.solard.pagevars = {
+                topnav: 'competition'
+            }
+        })
+    </script>
 </head>
 <body>
 <!--#include virtual="/client/template/global-banner-topnav.html" -->
-<!--#include virtual="/client/template/2015-banner-topnav.html"   -->
+<!--#include virtual="/2015/client/template/2015-banner-topnav.html"   -->
 <!--#include virtual="/client/template/global-breadcrumbs.html" -->
 <div class="container" id="content">
 <div class="row">
@@ -19,8 +25,11 @@
     <!-- BEGIN CONTENT -->
     <div class="col-sm-9 col-sm-push-3">
 
-        <img src="//placecreature.com/847/476" alt="" class="image-hero img-responsive">
-        <h1>Headline</h1>
+        <div class="image-hero">
+            <img src="//placecreature.com/847/476" alt="" class="img-responsive">
+        </div>
+
+        <h1>Team Landing Sample</h1>
         <p>Content</p>
 
 
@@ -183,7 +192,7 @@
     </div> <!--/column -->
 
     <!-- SIDE COLUMN -->
-    <!--#include virtual="/client/template/2015-leftnav.html" -->
+    <!--#include virtual="/2015/client/template/2015-leftnav.html" -->
     <!-- END SIDE COLUMN -->
 
 
