--- a/_template-team.html
+++ b/_template-team.html
@@ -4,20 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Solar Decathlon</title>
+    <title>Solar Decathlon: ___TITLE___</title>
     <!--#include virtual="/client/template/global-head.html" -->
     <script>
-        $(function() {
-            window.solard = $.extend( {}, window.solard )
-            window.solard.pagevars = {
-                topnav: 'competition'
-            }
-        })
+        $(function() { window.solard = { pagevars: { topnav: 'competition' } } })
     </script>
 </head>
 <body>
 <!--#include virtual="/client/template/global-banner-topnav.html" -->
-<!--#include virtual="/2015/client/template/2015-banner-topnav.html"   -->
+<!--#include virtual="/2015/client/template/2015-banner-topnav.html" -->
 <!--#include virtual="/client/template/global-breadcrumbs.html" -->
 <div class="container" id="content">
 <div class="row">
@@ -116,16 +111,15 @@
 
 
 
-    <!-- END CONTENT -->
     </div> <!--/column -->
+    <!-- END CONTENT -->
 
     <!-- SIDE COLUMN -->
     <!--#include virtual="/2015/client/template/2015-leftnav.html" -->
     <!-- END SIDE COLUMN -->
 
-
 </div><!-- /row -->
-</div> <!-- /container -->
+</div> <!-- /container#content -->
 <!--#include virtual="/client/template/global-footer.html"  -->
 <!--#include virtual="/client/template/global-scripts.html" -->
 </body>
