Minor tweaks to comm standards

--- a/commstandards/style-guide-full-text.html
+++ b/commstandards/style-guide-full-text.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Solar Decathlon: _____</title>
+    <title>Solar Decathlon: Solar Decathlon Style Guide Full Text</title>
     <!--#include virtual="/client/template/global-head.html" -->
+    <script>
+        $(function() { window.solard = {
+            pagevars: {
+              sidenavButton: 'style-guide.html'} 
+            }
+        })
+    </script>
 </head>
 <body>
 <!--#include virtual="/client/template/global-banner-topnav.html" -->
@@ -23,7 +30,7 @@
 
         <p>The full text of the U.S. Department of Energy Solar Decathlon Style Guide is presented below. Use the quick links below to jump to an alphabetized entry. </p>
 
-        <div class="callout" style="float: none; margin: 12px auto; width: 90%; text-align: center">
+        <div class="well" style="float: none; margin: 12px auto; width: 90%; text-align: center">
         <a href="#a">A</a> |
         <a href="#b">B</a> |
         <a href="#c">C</a> |
