minor js formatting

--- a/education-curriculum.html
+++ b/education-curriculum.html
@@ -7,10 +7,12 @@
     <title>Solar Decathlon: Solar Decathlon Curriculum</title>
     <!--#include virtual="/client/template/global-head.html" -->
     <script>
-        $(function() { window.solard = { pagevars: {
-            topnav: 'education'
-          , sidenavButton: 'education.html'
-        } } })
+        $(function() { window.solard = {
+            pagevars: {
+                topnav: 'education'
+              , sidenavButton: 'education.html'}
+            }
+        })
     </script>
 </head>
 <body>
