Home page RSS feed added

--- a/index.html
+++ b/index.html
@@ -72,44 +72,16 @@
 
             <h2>Latest News <i class="fa fa-rss-square"></i></h2>
 
-            <div class="feed-container">
+            <div class="latest-news-feed">
 
-                <div class="media">
-                    <a href="#" class="link-block">
-                        <div class="media-body">
-                            <h4 class="media-heading">Team Orange County Sprouts Casa del Sol on Its Home Turf</h4>
-                            <h5 class="date">August 10, 2015</h5>
-                            <p>The U.S. Department of Energy Solar Decathlon 2015’s Team Orange County—comprising the University of California, Irvine; ... More <i class="fa fa-chevron-circle-right"></i></p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="media">
-                    <a href="#" class="link-block">
-                        <div class="media-body">
-                            <h4 class="media-heading">Team Orange County Sprouts Casa del Sol on Its Home Turf</h4>
-                            <h5 class="date">August 10, 2015</h5>
-                            <p>The U.S. Department of Energy Solar Decathlon 2015’s Team Orange County—comprising the University of California, Irvine; ... More <i class="fa fa-chevron-circle-right"></i></p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="media">
-                    <a href="#" class="link-block">
-                        <div class="media-body">
-                            <h4 class="media-heading">Team Orange County Sprouts Casa del Sol on Its Home Turf</h4>
-                            <h5 class="date">August 10, 2015</h5>
-                            <p>The U.S. Department of Energy Solar Decathlon 2015’s Team Orange County—comprising the University of California, Irvine; ... More <i class="fa fa-chevron-circle-right"></i></p>
-                        </div>
-                    </a>
-                </div>
+                <p class="ajax-loading-msg"><i class="fa fa-refresh fa-spin"></i> Loading latest news...</p>
 
             </div>
 
         </div>
     </div>
 
-
+</div>
 
 <!-- END CONTENT -->
 </div> <!-- /container -->
