--- a/past.html
+++ b/past.html
@@ -40,7 +40,7 @@
     <div class="col-sm-4">
         <div class="media-block">
             <a href="/past/2013/" class="link-block">
-                <img src="assets/images/past-2013-btn.jpg" class="img-responsive">
+                <img src="assets/images/past-2013-btn.jpg" class="img-responsive" alt="">
                 <h4 class="header">Solar Decathlon 2013 <i class="fa fa-chevron-circle-right"></i></h4>
             </a>
         </div>
@@ -48,7 +48,7 @@
     <div class="col-sm-4">
         <div class="media-block">
             <a href="/past/2011/" class="link-block">
-                <img src="assets/images/past-2011-btn.jpg" class="img-responsive">
+                <img src="assets/images/past-2011-btn.jpg" class="img-responsive" alt="">
                 <h4>Solar Decathlon 2011 <i class="fa fa-chevron-circle-right"></i></h4>
             </a>
         </div>
@@ -56,7 +56,7 @@
     <div class="col-sm-4">
         <div class="media-block">
             <a href="/past/2009/" class="link-block">
-                <img src="assets/images/past-2009-btn.jpg" class="img-responsive">
+                <img src="assets/images/past-2009-btn.jpg" class="img-responsive" alt="">
                 <h4>Solar Decathlon 2009 <i class="fa fa-chevron-circle-right"></i></h4>
             </a>
         </div>
@@ -68,7 +68,7 @@
     <div class="col-sm-4">
         <div class="media-block">
             <a href="/past/2007/" class="link-block">
-                <img src="assets/images/past-2007-btn.jpg" class="img-responsive">
+                <img src="assets/images/past-2007-btn.jpg" class="img-responsive" alt="">
                 <h4 class="header">Solar Decathlon 2007 <i class="fa fa-chevron-circle-right"></i></h4>
             </a>
         </div>
@@ -76,7 +76,7 @@
     <div class="col-sm-4">
         <div class="media-block">
             <a href="/past/2005/" class="link-block">
-                <img src="assets/images/past-2005-btn.jpg" class="img-responsive">
+                <img src="assets/images/past-2005-btn.jpg" class="img-responsive" alt="">
                 <h4>Solar Decathlon 2005 <i class="fa fa-chevron-circle-right"></i></h4>
             </a>
         </div>
@@ -84,7 +84,7 @@
     <div class="col-sm-4">
         <div class="media-block">
             <a href="/past/2002/" class="link-block">
-                <img src="assets/images/past-2002-btn.jpg" class="img-responsive">
+                <img src="assets/images/past-2002-btn.jpg" class="img-responsive" alt="">
                 <h4>Solar Decathlon 2002 <i class="fa fa-chevron-circle-right"></i></h4>
             </a>
         </div>
