Various pre go-live fixes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="col-sm-4">
         <div class="latest-news">
 
-            <h2>Latest News <i class="fa fa-rss-square"></i></h2>
+            <h2><a href="/blog/">Latest News</a> <a href="/blog/feed"><i class="fa fa-rss-square"></i></a></h2>
 
             <div class="latest-news-feed">
 
